--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nicklaus Meadows</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="canonical"
+      href="https://nicklaus-meadows.github.io/m5-hw5-nicklaus-meadows/"
+    />
   </head>
   <body>
     <header>
@@ -23,9 +27,16 @@
     </header>
     <main>
       <section id="section1">
-        <img src="" alt="nicklaus meadows photograph" id="nickphoto" />
+        <h2>About Me</h2>
+        <img
+          src="photos/nicklaus-meadows-webpage-photo.jpg"
+          alt="nicklaus meadows photograph"
+          id="nickphoto"
+        />
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <h5>&copy; Nicklaus Meadows</h5>
+    </footer>
   </body>
 </html>
