css fixes for the photo and text with float, navbar fix

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <body>
     <header>
       <h1>Nicklaus Meadows</h1>
-      <nav>
+      <nav id="navbar">
         <a href="#" aria-labelledby="link to about page of nicklaus meadows"
-          >About</a
+          >About |</a
         >
         <a href="#" aria-labelledby="link to nicklaus meadows portfolio page"
-          >Portfolio</a
+          >Portfolio |</a
         >
         <a href="#" aria-labelledby="link to nicklaus meadows contact page"
           >Contact</a
@@ -27,12 +27,41 @@
     </header>
     <main>
       <section id="section1">
-        <h2>About Me</h2>
+        <h2 id="aboutMe"><span>About Me</span></h2>
         <img
           src="photos/nicklaus-meadows-webpage-photo.jpg"
           alt="nicklaus meadows photograph"
           id="nickphoto"
         />
+        <p id="part1About">
+          I'm Nicklaus Meadows and I am originally from Columbus, Ohio.
+          Currently, my wife and I are living in a suburb of Columbus called
+          Canal Winchester. We moved out here about 10 years ago after we met at
+          OSU, while we both we're studying commercial photography. Since we've
+          been out in Canal we have been developing a small homestead setup that
+          we both really enjoy working on. We have some chickens, quail,
+          turkeys, ducks and a nice sized garden. Professionally, I work for a
+          chemical company in Columbus as a web designer and SEO analyst. Prior
+          to my current position I worked on the front-end side of a school
+          system's website and a commercial photographer for Lane Bryant and a
+          local diamond company. I occasionally still pick up photography jobs
+          on the side if it is the right fit, but mainly I have been shooting
+          film for the enjoyment of the process. My wife and I really enjoy
+          traveling, and in 2025 we're going on a trip to SC with a friend of
+          mine to just take some nice photos and relax. In my spare time I
+          really enjoy working on my old Jeep Wrangler. It was my dad's and I
+          kept it after he passed. The Jeep is old enough to legally drink and
+          driving through Ohio winter's for that long has really taken a toll on
+          the frame and pretty much everything facing the pavement. So over the
+          past few years I've been trying to restore it to the best of my
+          abilities. Luckily, youtube is a huge help since a lot of people have
+          owned these Jeeps and love making tutorial videos. Next summer, I hope
+          to have it in well enough shape to take out for a nice cruise around
+          the country.
+        </p>
+      </section>
+      <section id="section2">
+        <p id="part2About"></p>
       </section>
     </main>
     <footer>
