adding aside and connect section, and css

--- a/index.html
+++ b/index.html
@@ -60,12 +60,43 @@
           the country.
         </p>
       </section>
+
       <section id="section2">
-        <p id="part2About"></p>
+        <p id="part2About">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam
+          incidunt et ipsum, tempora eius eveniet voluptatem, corporis deserunt,
+          ullam similique officiis nesciunt quis architecto consequatur cum
+          omnis libero in sint. Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Amet impedit, nam asperiores magni quod consectetur
+          aliquid libero ullam commodi itaque culpa iure assumenda atque quis
+          accusamus vero? Expedita, libero magni. Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Cum optio repellendus quia voluptatum
+          repellat saepe, fugit natus explicabo aliquid voluptatem mollitia,
+          tempore laborum commodi eligendi nihil possimus repudiandae reiciendis
+          ipsa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
+          hic veritatis rerum excepturi quas odit commodi deserunt impedit
+          officia accusamus soluta, nulla blanditiis? Repudiandae laborum
+          cupiditate excepturi nulla incidunt earum.
+        </p>
       </section>
     </main>
     <footer>
       <h5>&copy; Nicklaus Meadows</h5>
     </footer>
+
+    <aside>
+      <span>
+        <p id="connect"><span>Connect with Me</span></p>
+        <img src="photos/git.png" alt="image of github website" id="github" />
+        <img
+          src="photos/linkedin.png"
+          alt="image of linkedin website"
+          id="linkedin" />
+        <img
+          src="photos/soverflow.png"
+          alt="image of soverflow website"
+          id="soverflow"
+      /></span>
+    </aside>
   </body>
 </html>
