adding aside to the right spot and correct ratios

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <h1>Nicklaus Meadows</h1>
       <nav id="navbar">
         <a href="#" aria-labelledby="link to about page of nicklaus meadows"
-          >About |</a
-        >
+          >About</a
+        >|
         <a href="#" aria-labelledby="link to nicklaus meadows portfolio page"
-          >Portfolio |</a
-        >
+          >Portfolio</a
+        >|
         <a href="#" aria-labelledby="link to nicklaus meadows contact page"
           >Contact</a
         >
@@ -80,10 +80,6 @@
         </p>
       </section>
     </main>
-    <footer>
-      <h5>&copy; Nicklaus Meadows</h5>
-    </footer>
-
     <aside>
       <span>
         <p id="connect"><span>Connect with Me</span></p>
@@ -98,5 +94,9 @@
           id="soverflow"
       /></span>
     </aside>
+
+    <footer>
+      <h5>&copy; Nicklaus Meadows</h5>
+    </footer>
   </body>
 </html>
