adding the links needed I did not have one of those accounts though

--- a/index.html
+++ b/index.html
@@ -83,11 +83,22 @@
     <aside>
       <span>
         <p id="connect"><span>Connect with Me</span></p>
-        <img src="photos/git.png" alt="image of github website" id="github" />
-        <img
-          src="photos/linkedin.png"
-          alt="image of linkedin website"
-          id="linkedin" />
+        <a
+          href="https://github.com/nicklaus-meadows"
+          aria-labelledby="link to nicklaus meadows github account"
+          target="_blank"
+          ><img src="photos/git.png" alt="image of github website" id="github"
+        /></a>
+
+        <a
+          href="https://www.linkedin.com/in/nicklaus-meadows-8015aa125/"
+          aria-labelledby="link to linkeedin nicklaus meadows profile"
+          target="_blank"
+          ><img
+            src="photos/linkedin.png"
+            alt="image of linkedin website"
+            id="linkedin"
+        /></a>
         <img
           src="photos/soverflow.png"
           alt="image of soverflow website"
