main final push of css handling full header and footer adjusting links and some padding issues

--- a/index.html
+++ b/index.html
@@ -99,15 +99,18 @@
             alt="image of linkedin website"
             id="linkedin"
         /></a>
-        <img
-          src="photos/soverflow.png"
-          alt="image of soverflow website"
-          id="soverflow"
-      /></span>
+        <a href="https://stackoverflow.co/teams/">
+          <img
+            src="photos/soverflow.png"
+            alt="image of soverflow website"
+            id="soverflow" /></a
+      ></span>
     </aside>
 
-    <footer>
-      <h5>&copy; Nicklaus Meadows</h5>
-    </footer>
+    <div class="fixFooter">
+      <footer>
+        <h5>&copy; Nicklaus Meadows</h5>
+      </footer>
+    </div>
   </body>
 </html>
