--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           >About</a
         >|
         <a href="#" aria-labelledby="link to nicklaus meadows portfolio page"
-          >Portfolio</a
+          >Portfolios</a
         >|
         <a href="#" aria-labelledby="link to nicklaus meadows contact page"
           >Contact</a
